# py-xl-sindy-real-cartpole

./: cartpole_data_20260215_191024.csv  pyproject.toml  regression_solution.pkl  regression_solution_array.npy
3D_model_arduino/: LED_Holder.AD_PRT  README.md  Robot.AD_ASM  bearing.AD_PRT  bearing_clamp_1_.AD_PRT  belt_carrier.AD_PRT  belt_clamp.AD_PRT  cart.AD_PRT  cart_assembly.AD_ASM  cart_tensionner.AD_PRT  coupler_aluminum_profile.AD_PRT  expsupport.AD_PRT  female_rod_joint.AD_PRT  hall_holder.AD_PRT  male_base_joint.AD_PRT  male_rod_joint.AD_PRT  motor holder.AD_PRT  motor_coupler.AD_PRT  motor_coupler_plastic.AD_PRT  plunger.AD_PRT  pulley_holder.AD_PRT  robot_parameters.AD_GLP  rod_marker.AD_PRT  roller.AD_PRT  screw_belt_plunger.AD_PRT
3D_model_arduino/export/: LED_Holder.stl  bearing_clamp_1_.stl  belt_carrier.stl  belt_clamp.stl  cart.stl  cart_belt_only.stl  cart_tensionner.stl  coupler_aluminum_profile.stl  exp_support.stl  expsupport.stl  female_rod_joint.stl  hall_holder.stl  male_base_joint.stl  male_rod_joint.stl  motor holder.stl  motor_coupler_plastic.stl  motor_coupler_screw.stl  nut_belt_plunger.stl  plunger.stl  pulley_holder.stl  rod_marker.stl  roller.stl  screw_belt_plunger.stl
scripts/: __init__.py  camera_calibration.py  camera_test.py  cartpole_sindy_recorder.py  cartpole_sindy_retrieve.py  cartpole_windowed_tracker.py  casadi_from_sindy.py  casadi_from_sindy_try.py  click_tracker.py  color_dot_tracker.py  color_picker.py  generate_trajectory.py  main.py  pendulum_tracker.py  pendulum_tracker_optimized.py  pseyepy_tracker.py  test_casadi.py
(+1 files in other folders)
