[project]
name = "py-xl-sindy-real-cartpole"
version = "0.1.0"
description = "Real-time cartpole tracking and control using PS3Eye camera"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "opencv-python>=4.5.0",
    "numpy>=1.19.0",
    "pseyepy",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv.workspace]
members = [
    "pseyepy",
]

[tool.uv.sources]
pseyepy = { path = "../pseyepy" }
